remove dynamic part

--- a/.github/workflows/publish-to-readme-on-tag.yml
+++ b/.github/workflows/publish-to-readme-on-tag.yml
@@ -17,33 +17,8 @@ jobs:
       - name: Checkout this repository
         uses: actions/checkout@v3
       
-      - name: Install and build rdme dependencies
-        run: |
-          npm install
-          npm run build
-      
-      - name: Retrieve version values
-        id: rdme-version
-        run: ./bin/set-version-output
-
-      - name: Find and replace Node.js version placeholders
-        uses: jacobtomlinson/gha-find-replace@v2
-        with:
-          find: 'NODE_VERSION'
-          replace: ${{ steps.rdme-version.outputs.NODE_VERSION }}
-          regex: false
-          include: documentation/*
-      
-      - name: Find and replace `rdme` version placeholders
-        uses: jacobtomlinson/gha-find-replace@v2
-        with:
-          find: 'RDME_VERSION'
-          replace: ${{ steps.rdme-version.outputs.RDME_VERSION }}
-          regex: false
-          include: documentation/*
-      
       - name: Sync docs to ReadMe (dry run)
-        uses: ./
+        uses: readmeio/rdme@main
         with:
           rdme: openapi ./documentation --key=${{ secrets.README_API_KEY }} --id=${{ secrets.README_API_DEFINITION_ID }} --dryRun
 
