--- a/.github/workflows/publish-to-readme-on-tag.yml
+++ b/.github/workflows/publish-to-readme-on-tag.yml
@@ -19,7 +19,7 @@ jobs:
 
       # Dynamically update our docs with the latest version of rdme
       - name: Install and build rdme deps
-        run: npm ci && npm run build
+        run: npm ci && npm install rdme
 
       - name: Retrieve version values
         id: rdme-version
