--- a/.github/workflows/publish-to-readme-on-tag.yml
+++ b/.github/workflows/publish-to-readme-on-tag.yml
@@ -21,10 +21,10 @@ jobs:
       - name: Sync docs to ReadMe (dry run)
         uses: readmeio/rdme@main
         with:
-          rdme: openapi ./documentation --key=${{ secrets.README_API_KEY }} --id=${{ secrets.README_API_DEFINITION_ID }} --dryRun
+          rdme: openapi ./documentation/wordcab_api_reference.yaml --key=${{ secrets.README_API_KEY }} --id=${{ secrets.README_API_DEFINITION_ID }} --dryRun
 
       # Publish the documentation to ReadMe
       - name: Sync docs to ReadMe
         uses: readmeio/rdme@main
         with:
-          rdme: openapi ./documentation --key=${{ secrets.README_API_KEY }} --id=${{ secrets.README_API_DEFINITION_ID }} --version=${{ github.ref_name }}
+          rdme: openapi ./documentation/wordcab_api_reference.yaml --key=${{ secrets.README_API_KEY }} --id=${{ secrets.README_API_DEFINITION_ID }} --version=${{ github.ref_name }}
